--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: helpers
 description: A simple collection of helpers.
 version: 1.0.0
+publish_to: none
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
